move stuff around plus start on nav

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
+
+    def nav_version = "2.5.3"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
+
 }
