--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,14 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 
 dependencies {
 
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+
 //    implementation 'androidx.core:core-ktx:+'
     def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
     implementation composeBom
     androidTestImplementation composeBom
 
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha01'
 //    implementation "androidx.compose.material:material:1.4.3"
 
 
