--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 dependencies {
 
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+    implementation 'androidx.room:room-runtime:2.5.2'
 
 //    implementation 'androidx.core:core-ktx:+'
     def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
